# SDS-Extract

./: README.md  Requirements.txt  ai_extractor.py  analyze_template.py  app.py  clean_register.py  data_processor.py  db_handler.py  inspect_sds.py  ml_extractor.py  ocr_handler.py  packages.txt  pyproject.toml  sds_extractor.py  test_extraction.py  text_extraction.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-Scope-of-Work-1-Document-Type-o-The-documents-we-are-working-with-are-Safety-Data-Sheets-SDS--1745940936667.txt  SDS Register.xlsx  not.csv  sds_register (11).csv
data/: extraction_history.json  sds_database.sqlite  sds_register.csv  template.xlsx
