[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "numpy>=2.2.5",
    "openai>=1.76.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pymupdf>=1.25.5",
    "pytesseract>=0.3.13",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
    "xlsxwriter>=3.2.3",
]
